# Visual_Acoustic_Nav_Petra_2023

./: .gitattributes  .gitmodules  README.md
installation_scripts/: .gitignore  README.md  (+2 more)
third_party_sensor_ROS_setup/structure_core/StructureSDK-CrossPlatform-0.9/: CMakeLists.txt  README.html
third_party_sensor_ROS_setup/structure_core/StructureSDK-CrossPlatform-0.9/Apps/DepthTester/: DepthTester
third_party_sensor_ROS_setup/structure_core/StructureSDK-CrossPlatform-0.9/Builds/linux-release-x86_64/: CMakeCache.txt  Makefile  cmake_install.cmake  did-initial-cmake
third_party_sensor_ROS_setup/structure_core/StructureSDK-CrossPlatform-0.9/CMake/: project.cmake
third_party_sensor_ROS_setup/structure_core/StructureSDK-CrossPlatform-0.9/Documentation/: _camera_frames_8h.html  _camera_frames_8h_source.html  _capture_session_8h.html  _capture_session_8h_source.html  _capture_session_settings_8h.html  _capture_session_settings_8h.js  _capture_session_settings_8h_source.html  _capture_session_types_8h.html  _capture_session_types_8h.js  _capture_session_types_8h_source.html  _depth_image_generator_8h.html  _depth_image_generator_8h_source.html  _device_manager_8h.html  _device_manager_8h_source.html  _i_m_u_events_8h.html  _i_m_u_events_8h_source.html  _macros_8h.html  _macros_8h_source.html  _math_types_8h.html  _math_types_8h_source.html  _o_c_c_file_writer_8h.html  _o_c_c_file_writer_8h_source.html  _utilities_8h.html  _utilities_8h.js  _utilities_8h_source.html  android.html  android_8md.html  annotated.html  classes.html  dir_abc3eff930ed6ca7ea36401555621c0b.html  dir_abc3eff930ed6ca7ea36401555621c0b.js  files.html  files_dup.js  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_enum.html  functions_f.html  (+102 more)
third_party_sensor_ROS_setup/structure_core/StructureSDK-CrossPlatform-0.9/Documentation/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  enums_0.js  (+91 more)
third_party_sensor_ROS_setup/structure_core/StructureSDK-CrossPlatform-0.9/DriverAndFirmware/Android/: CoreFirmwareUpdater-1.2.0-Android-arm64.apk
third_party_sensor_ROS_setup/structure_core/StructureSDK-CrossPlatform-0.9/Libraries/AndroidProjectTemplate/: AndroidManifest.xml.in  CMakeLists.txt.in  MainActivity.cpp.in  MainActivity.java.in  StructureCoreUSBHelper.java.in  build.gradle.in  sample.p12  settings.gradle.in
third_party_sensor_ROS_setup/structure_core/StructureSDK-CrossPlatform-0.9/Libraries/GuiSupport/: Apple.h  Apple.mm  CMakeLists.txt  CommandLine.cpp  CommandLine.h  Drawing.cpp  Drawing.h  FileSelector.cpp  FileSelector.h  GuiSupport.h  Layout.cpp  Layout.h  Style.cpp  Style.h  Utility.cpp  Utility.h  Window.h  Window_Android.cpp  Window_Desktop.cpp
third_party_sensor_ROS_setup/structure_core/StructureSDK-CrossPlatform-0.9/Libraries/SampleProcessing/: CMakeLists.txt  FrameRenderer.cpp  FrameRenderer.h  SampleProcessing.h
third_party_sensor_ROS_setup/structure_core/StructureSDK-CrossPlatform-0.9/Libraries/Shared/: AppInterface.h  AppInterface_Desktop.cpp
third_party_sensor_ROS_setup/structure_core/StructureSDK-CrossPlatform-0.9/PreviousDriverAndFirmware/Android/: CoreFirmwareUpdater-1.0.0-Android-arm64.apk
third_party_sensor_ROS_setup/structure_core/StructureSDK-CrossPlatform-0.9/PreviousDriverAndFirmware/Linux/0_9_x_Driver/: Install-CoreDriver-Udev-Linux.sh
third_party_sensor_ROS_setup/structure_core/StructureSDK-CrossPlatform-0.9/PreviousDriverAndFirmware/Linux/1_0_0_Driver/: Install-CoreDriver-Udev-Linux.sh
third_party_sensor_ROS_setup/structure_core/StructureSDK-CrossPlatform-0.9/ROS/: CMakeLists.txt  to_ros1.sh  to_ros2.sh
third_party_sensor_ROS_setup/structure_core/StructureSDK-CrossPlatform-0.9/ROS/Documentation/: doc_config.conf  install_ros.markdown  install_ros2.markdown  main_features_ros.markdown  main_page.markdown  using_ros2_driver.markdown  using_ros_driver.markdown
third_party_sensor_ROS_setup/structure_core/StructureSDK-CrossPlatform-0.9/ROS/ros1/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
third_party_sensor_ROS_setup/structure_core/StructureSDK-CrossPlatform-0.9/ROS/ros2/: CMakeLists.txt  README.md  package.xml_ros2
third_party_sensor_ROS_setup/structure_core/StructureSDK-CrossPlatform-0.9/Samples/CorePlayground/: CMakeLists.txt  CaptureSessionDelegate.cpp  ConfigurationGui.cpp  CorePlayground.cpp  CorePlayground.h  PlayIcon.c  StopIcon.c  StreamingGui.cpp
third_party_sensor_ROS_setup/structure_core/StructureSDK-CrossPlatform-0.9/Samples/DepthTester/: CMakeLists.txt  CaptureSessionDelegate.cpp  ConfigurationGui.cpp  DepthTester.cpp  DepthTester.h  PlayIcon.c  StopIcon.c  StreamingGui.cpp
third_party_sensor_ROS_setup/structure_core/StructureSDK-CrossPlatform-0.9/Samples/GuiTest/: CMakeLists.txt  GuiTest.cpp
third_party_sensor_ROS_setup/structure_core/StructureSDK-CrossPlatform-0.9/Samples/MultiRecorder/: CMakeLists.txt  CaptureSessionDelegate.cpp  ConfigurationGui.cpp  MultiRecorder.cpp  MultiRecorder.h  StreamingGui.cpp
third_party_sensor_ROS_setup/structure_core/StructureSDK-CrossPlatform-0.9/Samples/SimpleStreamer/: CMakeLists.txt  SimpleStreamer.cpp
third_party_sensor_ROS_setup/structure_core/StructureSDK-CrossPlatform-0.9/Scripts/: build.sh  create-macos-pkginfo.sh
vz_ros_packages/vz_pedestrian_tracker/: CMakeLists.txt  README.md  package.xml
vz_ros_packages/vz_pedestrian_tracker/include/: image_converter.hpp  person_tracker.hpp
vz_ros_packages/vz_pedestrian_tracker/launch/: pedestrian_tracker.launch
vz_ros_packages/vz_pedestrian_tracker/nodes/: image_converter_node.cpp
vz_ros_packages/vz_pedestrian_tracker/src/vz_pedestrian_tracker/: image_converter.cpp  person_tracker.cpp
(+1162 files in other folders)
